# wav-utils-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  suppressions.xml
.github/: copilot-instructions.md
examples/: CMakeLists.txt  basic_usage.cpp
include/wav/: Reader.hpp  WavFileUtils.hpp
test/: CMakeLists.txt  test_basics.cpp  test_hello.cpp
wav-resources/: WAVE File Format.html
